<resources>
    <string name="app_name">Cadastro1</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome_produto">Produto</string>
    <string name="endereco">Endereco</string>
    <string name="telefone">Telefone</string>
    <string name="cep">Cep</string>
    <string name="cnpj">Cnpj</string>
    <string name="nome_farmacia">Farmácia</string>
    <string name="descricao_produto">Descrição</string>
    <string name="fabricante">Fabricante</string>
    <string name="preco_produto">Preço Produto</string>
    <string name="Imagem">Imagem</string>
    <string name="Farmacia">Farmácia</string>
    <string name="uid_farmacia">Uid_Farmácia</string>
    <string name="uid_produto">Uid_Produto</string>
    <string name="preco">Preço</string>
    <string name="farmaproduto">FarmaProduto</string>
</resources>
